--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Amazon price watcher",
   "main": "index.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Hayden",
   "license": "ISC",
   "dependencies": {
-    "node-mailer": "^0.1.1"
+    "@types/express": "^4.16.0",
+    "express": "^4.16.4",
+    "node-mailer": "^0.1.1",
+    "typescript": "^3.1.6"
   }
 }
