--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules
-.vscode
 build
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+npm-debug.log
+.DS_Store
+Thumbs.db
