--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "Hayden",
   "license": "ISC",
   "dependencies": {
+    "@types/cheerio": "^0.22.9",
     "@types/express": "^4.16.0",
+    "@types/node-fetch": "^2.1.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
+    "node-fetch": "^2.2.1",
     "node-mailer": "^0.1.1",
     "typescript": "^3.1.6"
   },
