--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
+    "@types/nock": "^9.3.0",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "nock": "^10.0.2",
     "sinon": "^7.1.1",
     "ts-node": "^7.0.1"
   }
