--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Amazon price watcher",
   "main": "index.ts",
   "scripts": {
+    "start": "npm run build && node build/src/app.js",
     "build": "tsc",
     "test": "mocha --require ts-node/register test/*.test.ts test/**/*.test.ts"
   },
@@ -11,13 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/cheerio": "^0.22.9",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/node-fetch": "^2.1.2",
+    "@types/winston": "^2.4.4",
     "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "node-fetch": "^2.2.1",
     "node-mailer": "^0.1.1",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
