--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Hayden",
   "license": "ISC",
   "dependencies": {
+    "@types/ajv": "^1.0.0",
     "@types/cheerio": "^0.22.9",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/node-fetch": "^2.1.2",
     "@types/winston": "^2.4.4",
+    "ajv": "^6.10.0",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
